# covert_c2_ping

./: .gitignore  README.md  makefile
.github/workflows/: cicd.yml  pages  pages.yml
covert_c2_ping_common/src/: lib.rs
covert_c2_ping_server/: Cargo.toml
covert_c2_ping_server/src/: main.rs
covert_c2_ping_server/src/workers/: ping.rs  session.rs  web.rs
covert_c2_ping_web/: Cargo.toml
covert_c2_ping_web/src/: agent_list.rs  main.rs
